# ledmatrixdriver

./: .gitignore  48v_supply.kicad_sch  _autosave-led_matrix_driver.kicad_pcb  led_matrix_driver.kicad_pcb  led_matrix_driver.kicad_prl  led_matrix_driver.kicad_pro  led_matrix_driver.kicad_sch  ~led_matrix_driver.kicad_sch.lck
code-is-art/: 00-README  CMakeLists.txt  config.html  convert-files.sh  index.html  install.sh
code-is-art/src/: bootsel.c  config.html.h  default.png.h  dhcpserver.c  dhcpserver.h  dnsserver.c  dust-httpd-config.h  dust-httpd-setimg.h  dust-httpd-stdout.h  dust-httpd.c  dust-httpd.h  dust-lwip.h  gclock.pio.h  hacklab.h  index.html.h  lwipopts.h  main.c  manda.h  matrix.h  nyan.png.h  palettes.h  roe-fader.c  roe-pico.c  roe-pico.h  tunnel-data.h  tunnel.h  wificonfig.h
